--- a/app/src/main/resources/fx_screens/mainWindow.fxml
+++ b/app/src/main/resources/fx_screens/mainWindow.fxml
@@ -1,66 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
-    <top>
-        <HBox prefHeight="40" style="-fx-background-color: #14165A; -fx-padding: 10;">
-            <Button fx:id="menuButton" style="-fx-font-size: 20; -fx-background-color: transparent;" text="☰" textFill="WHITE">
-            <font>
-               <Font name="/fonts/Tilda Sans Bold" size="12.0" />
-            </font></Button>
-        </HBox>
-    </top>
-
-    <center>
-        <StackPane style="-fx-background-color: #ecf0f1;">
-            <Label style="-fx-font-size: 24;" text="ВСТРЕЧЕСЛАВ">
-            <font>
-               <Font name="Fyodor Bold " size="48.0" />
-            </font></Label>
-
-            <VBox fx:id="sideMenu" maxWidth="200" minWidth="0" prefWidth="200" style="-fx-background-color: #CDCEFF; -fx-padding: 20;" translateX="-200" StackPane.alignment="CENTER_LEFT">
-                <Button fx:id="main" maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
+<AnchorPane maxHeight="629.0" maxWidth="1137.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
+   <children>
+      <ImageView fx:id="animatedImageView" fitHeight="249.0" fitWidth="332.0" layoutX="808.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/menuV.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="49.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="29.0" layoutY="24.0" text="Создавай">
                <font>
-                  <Font name="Tilda Sans Medium" size="12.0" />
-               </font></Button>
-            <Button fx:id="download" maxWidth="Infinity" onAction="#handleDownloadClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Загрузить стенограмму" />
-                <Button fx:id="save" maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
-                <Button fx:id="change" maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Редактирование" />
-                <Button maxWidth="Infinity" onAction="#handleExitClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Выход" />
-            </VBox>
-         <AnchorPane maxHeight="554.0" maxWidth="338.0" prefHeight="554.0" prefWidth="338.0" style="-fx-background-radius: 30; -fx-background-color: #0A0C31;">
-            <children>
-               <ImageView fitHeight="244.0" fitWidth="276.0" layoutX="50.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@../images/Group%201.png" />
-                  </image>
-               </ImageView>
-               <Label layoutX="60.0" layoutY="337.0" prefHeight="23.0" prefWidth="238.0" text="В следующем обновлении" textFill="WHITE">
-                  <font>
-                     <Font name="Tilda Sans Bold" size="18.0" />
-                  </font>
-               </Label>
-               <Label layoutX="38.0" layoutY="361.0" text=" здесь будет много нового, жди!" textFill="WHITE">
-                  <font>
-                     <Font name="Tilda Sans Bold" size="18.0" />
-                  </font>
-               </Label>
-            </children>
-            <opaqueInsets>
-               <Insets left="40.0" right="40.0" />
-            </opaqueInsets>
-         </AnchorPane>
-        </StackPane>
-    </center>
-</BorderPane>
+                  <Font name="Manrope Bold" size="20.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0b0f85" height="8.0" layoutX="29.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
+         </children></Pane>
+      <Pane layoutX="432.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20;">
+         <effect>
+            <DropShadow height="93.52" radius="45.09" width="88.84">
+               <color>
+                  <Color red="0.08049999922513962" green="0.0894833356142044" blue="0.3499999940395355" opacity="0.20000000298023224" />
+               </color>
+            </DropShadow>
+         </effect>
+         <children>
+            <Label layoutX="37.0" layoutY="24.0" text="Распознавай">
+               <font>
+                  <Font name="Manrope Bold" size="20.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="8.0" layoutX="37.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
+            <Label layoutX="206.0" layoutY="87.0" text="Деловые">
+               <font>
+                  <Font name="Manrope SemiBold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="206.0" layoutY="108.0" text="встречи">
+               <font>
+                  <Font name="Manrope SemiBold" size="15.0" />
+               </font>
+            </Label>
+            <Button layoutX="246.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF;" text="&gt;">
+               <font>
+                  <Font name="Manrope Bold" size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+      <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #14165A; -fx-background-radius: 20;">
+         <children>
+            <ImageView fitHeight="85.0" fitWidth="111.0" layoutX="-29.0" layoutY="-26.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/hand.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+   </children>
+</AnchorPane>
