--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane maxHeight="618.0" maxWidth="1137.0" prefHeight="618.0" prefWidth="1137.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane fx:id="tabs" prefHeight="70.0" prefWidth="1138.0" style="-fx-background-color: rgba(65, 67, 185, 0.7);" />
+      <Pane fx:id="tabPane" prefHeight="70.0" prefWidth="1138.0" style="-fx-background-color: rgba(65, 67, 185, 0.7);" />
       <Pane layoutY="70.0" prefHeight="550.0" prefWidth="1138.0" style="-fx-background-color: rgba(51, 56, 213, 0.3);">
          <children>
             <Pane layoutX="61.0" layoutY="61.0" prefHeight="428.0" prefWidth="1017.0" style="-fx-background-color: #DADBFF; -fx-background-radius: 40;">
