--- a/app/src/main/resources/fx_screens/saves.fxml
+++ b/app/src/main/resources/fx_screens/saves.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="618.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.SavesController">
+   <children>
+      <Pane fx:id="saves" layoutX="113.0" layoutY="63.0" prefHeight="492.0" prefWidth="912.0" style="-fx-background-color: rgba(122, 156, 250, 0.7); -fx-background-radius: 30;" />
+   </children>
 </AnchorPane>
