--- a/app/src/main/resources/fx_screens/load.fxml
+++ b/app/src/main/resources/fx_screens/load.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="618.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.LoadController">
+<AnchorPane prefHeight="618.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="149.0" layoutY="32.0" prefHeight="310.0" prefWidth="840.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 50;">
          <children>
